add missing api
